--- a/mandara/templates/items.html
+++ b/mandara/templates/items.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
     <h1>Items</h1>
-    <form method="post" action="{{ url_for('show_main_theme') }}" class="main_theme">
+    <form method="post" action="{{ url_for('show_chart', username=username) }}" class="main_theme">
         <div class="container">
             <div class="row">
                 {% for item in items[0:3] %}
