1.UI changed 2.bug fix

--- a/mandara/templates/sub_theme.html
+++ b/mandara/templates/sub_theme.html
@@ -30,7 +30,8 @@
             </div>
             <div class="row">
                 <input name="sub_to_main" type=submit value=戻る class="btn btn-secondary">
-                <input name="sub_to_items_sel" type=submit value=次へ class="btn btn-primary">
+                <!--<input name="sub_to_items_sel" type=submit value=次へ class="btn btn-primary">-->
+                <input name="sub_to_items_all" type=submit value=次へ class="btn btn-primary">
             </div>
         </div>
     </form>
