Added function generating a mandara chart as image.

--- a/mandara/templates/done.html
+++ b/mandara/templates/done.html
@@ -11,8 +11,10 @@
                 </div>
             </div>
             -->
+            <img src="data:image/png;base64, {{ img_data }}">
             <div class="row">
-                <input name="done_to_items" type=submit value=戻る class="btn btn-secondary">
+                <input name="done_to_items_all" type=submit value=戻る class="btn btn-secondary">
+                <input name="restart" type=submit value=はじめから class="btn btn-secondary">
             </div>
         </div>
     </form>
