--- a/mandara/templates/items_all.html
+++ b/mandara/templates/items_all.html
@@ -166,6 +166,7 @@
 
             <div class="row">
                 <input name="items_all_to_sub" type=submit value=戻る class="btn btn-secondary">
+                <input name="items_all_to_done" type=submit value=完了 class="btn btn-primary">
             </div>
         </div>
 
