・Massivelyテンプレートを使った見た目に改善。 ・マンダラチャートをテーブルで表示するように変更

--- a/mandara/templates/done.html
+++ b/mandara/templates/done.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %}
+{# {% extends "layout.html" %} #}
+{% extends "chart.html" %}
 {% block body %}
 <div class="form-group">
     <h1>Done</h1>
