--- a/hachione/templates/layout.html
+++ b/hachione/templates/layout.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
     -->
-<title>マンダラチャート</title>
+<title>ハチワンマップ</title>
 
 </head>
 
 <body>
     <div class=instruction>
-        <h1>Mandara Chart is ...</h1>
+        <h1>ハチワンマップとは...</h1>
     </div>
 
-    <h1>Mandara Chart</h1>
+    <h1>ハチワンマップ</h1>
     {% block body %}{% endblock %}
 
     <!-- Optional JavaScript -->
