--- a/hachione/templates/index.html
+++ b/hachione/templates/index.html
@@ -9,6 +9,10 @@
 		<title>ハチワンマップ - Release your idea - </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+		<!-- Bootstrap CSS -->
+	    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.css') }}">
+
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/massively/main.css') }}" />
 		<noscript><link rel="stylesheet" href="{{ url_for('static', filename='css/massively/noscript.css') }}" /></noscript>
 
@@ -29,8 +33,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>あなたを悩ます<br />
-						問題に対処するには</h1>
+						<h1>最近、ずっと同じことで<br />
+						悩んでいるような・・・</h1>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -38,7 +42,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="{{ url_for('show_index') }}" class="logo">ハチワンマップ</a>
+						<a href="{{ url_for('show_index') }}" class="logo">そんな状態から脱するには</a>
 					</header>
 
 				<!-- Nav -->
@@ -68,23 +72,48 @@
 										　人間生きていれば、職場の人間関係やキャリアの悩み、金欠や病気など、 なにかと問題が起きるものです。
 										私たちはそれらの問題に対処しながら前に進む必要がありますが、時にはどうしていいかわからず、
 										途方に暮れたり、とりあえず問題を先送りにしてしまうことがあります。
-										問題を解決できない状態は、当然あなたのストレスを増大させますが、
+										問題を解決できない状態はストレスフルではありますが、時間が解決したり、忘れられることなら、
+										特に問題ないでしょう。
+										しかし、同じ問題を繰り返し考えているようだと問題です。<br>
+										　反すう思考という言葉を聞いたことがあるでしょうか？
+										反すう思考とは、過去の失敗やネガティブな経験を、何度も頭の中で繰り返し考え続けてしまうことです。
+										反すう思考は単純にしんどいものですし、うつ症状との相関も高いと言われています。
+										(<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2832856/">1</a>)
+										　反すう思考から抜けるために、頑張ってその問題について考えないようにしようとする人もいますが、逆効果です。
+										皮肉過程理論と言って、例えば「シロクマのことを絶対に考えないでください」と言われてしまうと、
+										かえって人は逆にシロクマのことを考えてしまいます。頭から離れないことを考えないようにしても、
+										そううまくはできないようです。<br>
+										　ではどうすればよいかと言うと、問題に向き合うことです。
+										「そんな気になれるか！」という気持ちはごもっともなんですが、
+										問題が解決できれば悩みようもないですし、
+										仮に問題を解決できなくても、とにかく行動を起こせれば、行動している間は反すう思考を
+										ストップできます。
+										例えば、仕事のプレゼンでアイデアを非難されたとき、
+										「あそこまで言わなくても・・・もう今日は最低の気分だなー」とクヨクヨするよりは、
+										「ああいうアイデアは受け入れられないのかー。どういうアイデアならいいかな？
+										どういう言い方ならいいかな？」と考える方が、気が楽になります。
+										RPGのボス戦で負けたら、次は回復アイテムを多めに用意しようとか、
+										防具をいいものに変えようとか考えるみたいに、カジュアルに問題に向き合えばいいのです。
+
+										<!--
 										最悪の場合、<b><u>あなたの中に学習性無力感が現れ、人生の満足度を大きく低下させます。</u></b>
 										学習性無力感とは、アメリカのポジティブ心理学者マーティン・セリグマンが1967年に発表した現象で、
 										長期にわたってストレスの回避困難な環境に置かれた人や動物は、
 										その状況から逃れようとする努力すら行わなくなるという現象です。
-										一方、問題を解決できた体験が増えていけば、人生のコントロール感が増し、
-										人生の満足度が向上します。
+										一方で、問題を解決できた経験が増えていけば、 人生のコントロール感が増し、
+										自信や人生の満足度が向上します。
 										よりよい人生を送るには、問題を解決する力が不可欠なわけです。
+										-->
 									</p>
 
-									<h3 style="text-align: left">問題を解決する力を上げるには</h3>
+									<h3 style="text-align: left">問題解決に向けて行動する方法？</h3>
 									<p style="text-align: left">
-										　ではどうしたら問題を解決する力が上がるのでしょうか。
+										　そうはいっても、何から手を付けたらいいかわからないという人も多いでしょう。
+										<!--ではどうしたら問題を解決する力が上がるのでしょうか。-->
 										問題を解決できない状態というのは、ひとつの視点に凝り固まってしまい、
-										現状を打開するアイデアが出ないケースが多いかと思います。
-										視野を広げ、アイデアを生むのを助けるツールとして、
-										<b><u>ハチワンマップ</u></b>を開発しました。
+										現状を打開するアイデアが出ないケースが多いです。
+										そこで、視野を広げ、アイデアが生まれるのを助けるツールとして、
+										<b><u>ハチワンマップ</u></b>をつくりました。
 										ハチワンマップは、数独のような９ｘ９のマスを使い、
 										抱えている問題や課題から、対策やアイデアを考えるためのツールです。
 										<br>
@@ -92,26 +121,32 @@
 										<ol class="proc-inner" style="font:inherit;">
 											<li><b>メインテーマを考える</b><br>あなたが解決したい問題（メインテーマ）を考えます。</li>
 											<li><b>サブテーマを考える</b><br>メインテーマを中心とする３ｘ３のマスを描き、<br>
-												メインテーマの対策や、連想される事柄（サブテーマ）を周囲８マスに書き込みます。<br></li>
-											<li><b>ハチワンマップの枠を作る</b><br>サブテーマ作成で作った９マスを中心とする
+												メインテーマの対策や、連想される事柄（サブテーマ）を周囲８マスに書き込みます。</li>
+											<li><b>ハチワンマップを作る</b><br>サブテーマ作成で作った９マスを中心とする
 												９ｘ９のマスを描きます。<br>新しくできたマスを８つのエリアに分け、
-												それぞれの中心にサブテーマを書きます。</li>
-											<li><b>ハチワンマップを作る</b><br>各サブテーマについて、より具体的な対策や、<br>
-												連想できる事柄を記入します。すべてのマスが埋まったら完成です。</li>
+												それぞれの中心にサブテーマを書きます。<br>
+											    その後、各サブテーマについて、より具体的な対策や、
+												連想できる事柄を記入します。<br>
+												すべてのマスが埋まったら完成です。</li>
 										</ol>
 									</p>
+
+									<img src="{{ url_for('static', filename='images/steps.png') }}" class="img-fluid">
+
+									<!--
 									<div class="justify-content-center proc-outer">
 									</div>
-									<!-- 絵で説明 -->
+									-->
 									<p style="text-align: left">
 										　人間の脳の習性として、「空白の原則」と言われるものがあります。
 										人間は、空白があるとそれを埋めたいと思う習性があります。
 										この習性を使い、アイデアを出しやすくするのがハチワンマップというわけです。
-										本ページでは、ブラウザ上でハチワンマップを使える無料アプリを置いています。
-										使ってみたい方は、以下のリンクからどうぞ。
+										本ページでは、Webブラウザ上で、無料でハチワンマップを体験できます。
+										興味のある方は、以下のリンクからどうぞ。
 									</p>
 
 								</header>
+
 								<ul class="actions special">
 									<li><a href="{{ url_for('set_username') }}" class="button large">ハチワンマップを使ってみる</a></li>
 								</ul>
