--- a/hachione/templates/done.html
+++ b/hachione/templates/done.html
@@ -3,8 +3,9 @@
 {% block body %}
 <div class="form-group">
 	<header class="major">
-        <h4>ハチワンマップ完成！</h4>
-        <p>お疲れ様でした。ハチワンマップの画像を保存してください。あなたの問題が解決されますように。</p>
+        <h2>完成！</h2>
+        <p>お疲れ様でした。ハチワンマップの画像を保存してください。あなたの問題が解決されますように。<br>
+            「はじめから」を押すと、ハチワンマップが消去され、最初からはじめることができます。</p>
     </header>
 
     <img src="data:image/png;base64, {{ chart_img9x9 }}" class="img-fluid">
