--- a/hachione/templates/chart.html
+++ b/hachione/templates/chart.html
@@ -9,11 +9,13 @@
 		<title>ハチワンマップ - Release your idea - </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/massively/main.css') }}" />
-		<noscript><link rel="stylesheet" href="{{ url_for('static', filename='css/massively/noscript.css') }}" /></noscript>
 
 		<!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.css') }}">
+
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/massively/main.css') }}" />
+		<noscript><link rel="stylesheet" href="{{ url_for('static', filename='css/massively/noscript.css') }}" /></noscript>
+
 		<style type="text/css">
 			.modal-backdrop {
 				display: none;
@@ -48,9 +50,14 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="{{ url_for('show_index') }}">ハチワンマップとは</a></li>
-							<li class="active"><a href="{{ url_for('set_username') }}">ハチワンマップを使う</a></li>
+							<li class="active"><a href="{{ url_for('goto_login') }}">ハチワンマップを使う</a></li>
 						</ul>
-						<!--
+						{% if session.user_id %}
+						<ul class="icons" style='font-family: "Source Sans Pro", Helvetica, sans-serif;'>
+							<Li>ようこそ　{{session.user_name}}　さん</Li>
+							<li><a href="{{ url_for('logout') }}">ログアウト</a></li>
+						</ul>
+						{% endif %}						<!--
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -68,7 +75,6 @@
 								<header class="major">
 									<h1>ハチワンマップを<br />
 									使ってみよう</h1>
-									<!-- <p>Say something...</p> -->
 									{% block body %}{% endblock %}
 								</header>
 							</section>
