・バグ修正 ・main_theme枠幅修正 ・19文字以上の文字は18字まで表示対応 ・画像alt設定 ・validation対応：/, \, <>, &, [ ]禁止

--- a/hachione/templates/done.html
+++ b/hachione/templates/done.html
@@ -8,7 +8,7 @@
             「はじめから」を押すと、ハチワンマップが消去され、最初からはじめることができます。</p>
     </header>
 
-    <img src="data:image/png;base64, {{ chart_img9x9 }}" class="img-fluid">
+    <img src="data:image/png;base64, {{ chart_img9x9 }}" class="img-fluid" alt="my_hachionemap">
 
     <form method="post" action="{{ url_for('show_chart', username=username) }}" class="main_theme">
         <div class="container">
