--- a/hachione/templates/sub_theme.html
+++ b/hachione/templates/sub_theme.html
@@ -14,10 +14,19 @@
                     （すべて埋めなくてもいいですが、できるだけたくさん埋めましょう。）</li>
             </ol>
         </div>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% for category, message in messages %}
+                {% if category == 'validation_error'  %}
+                    <div class="alart alert-danger justify-content-center flash">{{ message }}</div>
+                {% endif %}
+            {% endfor %}
+        {% endwith %}
+
     </div>
 </header>
 
-<img src="data:image/png;base64, {{ chart_img3x3 }}" class="img-fluid" usemap="#3x3">
+<img src="data:image/png;base64, {{ chart_img3x3 }}" class="img-fluid" usemap="#3x3" alt="my_hachionemap_sub">
 <map name="3x3">
     <area shape="rect" coords="17,11,124,117" alt="sub_theme0" data-toggle="modal" data-target="#Modal" style="cursor:pointer"/>
     <area shape="rect" coords="123,11,230,117" alt="sub_theme1" data-toggle="modal" data-target="#Modal" style="cursor:pointer"/>
