・ライティング修正 ・viewpoint変更

--- a/hachione/templates/index.html
+++ b/hachione/templates/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>ハチワンマップ - Release your idea - </title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 
 		<!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.css') }}">
@@ -77,22 +77,32 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major" style="font-style: normal;">
-									<h3 style="text-align: left">あなたを悩ます問題</h3>
-									<p style="text-align: left">
-										　人間生きていれば、職場の人間関係やキャリアの悩み、金欠や病気など、 なにかと問題が起きるものです。
+									<h3 style="text-align: left; font-size: x-large">あなたを悩ます問題</h3>
+									<p style="text-align: left; font-size: large">
+										　人間生きていれば、職場の人間関係やキャリアの悩み、金欠や病気など、なにかと問題が起きるものです。
 										私たちはそれらの問題に対処しながら前に進む必要がありますが、時にはどうしていいかわからず、
+										ひとまず問題を先送りにすることがあります。
+										その問題が忘れられたり、受け入れられるものならよいのですが、
+										<!--
 										途方に暮れたり、とりあえず問題を先送りにしてしまうことがあります。
 										問題を解決できない状態はストレスフルではありますが、時間が解決したり、忘れられることなら、
 										特に問題ないでしょう。
-										しかし、同じ問題を繰り返し考えているようだと問題です。<br>
+										-->
+										そうではなく、同じ問題を繰り返し考えているようだと問題です。
+									</p>
+									<h3 style="text-align: left; font-size: x-large">うつ病をも起こす悩みのループ</h3>
+									<p style="text-align: left; font-size: large">
 										　反すう思考という言葉を聞いたことがあるでしょうか？
-										反すう思考とは、過去の失敗やネガティブな経験を、何度も頭の中で繰り返し考え続けてしまうことです。
+										反すう思考とは、過去の失敗やネガティブなことを、何度も頭の中で繰り返し考え続けてしまうことです。
 										反すう思考は単純にしんどいものですし、うつ症状との相関も高いと言われています。
 										(<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2832856/">1</a>)
 										　反すう思考から抜けるために、頑張ってその問題について考えないようにしようとする人もいますが、逆効果です。
 										皮肉過程理論と言って、例えば「シロクマのことを絶対に考えないでください」と言われてしまうと、
 										かえって人は逆にシロクマのことを考えてしまいます。頭から離れないことを考えないようにしても、
-										そううまくはできないようです。<br>
+										そううまくはできないようです。
+									</p>
+									<h3 style="text-align: left; font-size: x-large">悩みのループから抜けるには</h3>
+									<p style="text-align: left; font-size: large">
 										　ではどうすればよいかと言うと、問題に向き合うことです。
 										「そんな気になれるか！」という気持ちはごもっともなんですが、
 										問題が解決できれば悩みようもないですし、
@@ -116,8 +126,8 @@
 										-->
 									</p>
 
-									<h3 style="text-align: left">問題解決に向けて行動する方法？</h3>
-									<p style="text-align: left">
+									<h3 style="text-align: left; font-size: x-large">問題解決に向けて行動する方法とは</h3>
+									<p style="text-align: left; font-size: large">
 										　そうはいっても、何から手を付けたらいいかわからないという人も多いでしょう。
 										<!--ではどうしたら問題を解決する力が上がるのでしょうか。-->
 										問題を解決できない状態というのは、ひとつの視点に凝り固まってしまい、
@@ -128,7 +138,7 @@
 										抱えている問題や課題から、対策やアイデアを考えるためのツールです。
 										<br>
 										　ハチワンマップの使い方は、以下の手順の通りです。
-										<ol class="proc-inner" style="font:inherit;">
+										<ol class="proc-inner" style="font:inherit; font-size: large">
 											<li><b>メインテーマを考える</b><br>あなたが解決したい問題（メインテーマ）を考えます。</li>
 											<li><b>サブテーマを考える</b><br>メインテーマを中心とする３ｘ３のマスを描き、<br>
 												メインテーマの対策や、連想される事柄（サブテーマ）を周囲８マスに書き込みます。</li>
@@ -147,7 +157,7 @@
 									<div class="justify-content-center proc-outer">
 									</div>
 									-->
-									<p style="text-align: left">
+									<p style="text-align: left; font-size: large">
 										　人間の脳の習性として、「空白の原則」と言われるものがあります。
 										人間は、空白があるとそれを埋めたいと思う習性があります。
 										この習性を使い、アイデアを出しやすくするのがハチワンマップというわけです。
