--- a/hachione/templates/chart.html
+++ b/hachione/templates/chart.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>ハチワンマップ - Release your idea - </title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 
 		<!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.css') }}">
